@@ -24,10 +24,9 @@ remove = Dist::Zilla::Role::MetaProvider
 remove = Dist::Zilla::Role::PrereqSource
 remove = Test::DZil
 
-
 [Prereqs]
 Dist::Zilla = 6.000
-Alien::Build = 0.08
+Alien::Build = 0.10
 
 [Author::Plicease::Upload]
 cpan = 1
